tests/negative/Test7.sp
(* Testing if boolean expressions *)
if true > 2 {

}